force-app/main/default/objects/Account/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>身長</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>