force-app/main/default/objects/Account/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <label>居住地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>